Support fixed prefixes and suffixes when extracting terms from search template URLs.

This causes autocompletions for custom search engines where the query parameter
has some prefix or suffix to work correctly, instead of duplicating it.

BUG=602450
TEST=components_unittests:TemplateURLTest.ExtractSearchTermsWithPrefixAndSuffix

Review URL: https://codereview.chromium.org/1902263002

Cr-Commit-Position: refs/heads/master@{#388958}

Former-commit-id: 508320252e351bc010cc25d837b55baf6d0d22c4